Fixed regisration problem